# oolong

./: README.md  interp.cabal  stack.yaml
examples/: 01-types.oo  02-arithm-and-rel-operators.oo  02-arithmetic.oo  02-literals.txt  02-variables.oo  03-var-assign.oo  05-if-else.oo  05-if.oo  05-while.oo  06-07-fun-by-ref.oo  06-fun-by-ref.oo  06-fun-by-val.oo  06-recursion.oo  09-13-nest-fun.oo  09-scope-var-shadowing.oo  11-string-return.oo  func-param.oo  malysa.oo  nest-fun.oo  recursion.oo  same-names.oo  shadow.oo  todo.oo  weird.oo
examples/bad/: 06-fun-by-ref-wrong-arg.oo  bad.oo  div-by-0.oo  div-by-string.oo  eq.oo  fun-same-arg-names.oo  if-int.oo  invalid-num-of-args.oo  missing-return-special-case.oo  negation.oo  no-return.oo  print-fun.oo  rec-lambda.oo  wrong-return.oo
examples/good/: 01-types.oo  03-var-decl.oo  04-print.oo  05-while-and-if.oo  06-07-fun-by-ref.oo  06-07-fun-by-val.oo  06-recursion.oo  10-TODO.oo  10-div-by-0.oo  11-various-fun-params.oo  12-typecheck.oo  16-break.oo  16-continue.oo  17-func-or-lambda-as-param.oo  17-lambda-ref-args.oo  17-return-fun-closure.oo  function-like-variable.oo  misc.oo
examples/tc/: expr.oo
src/: Common.hs  Main.hs  Makefile  interpreter
src/interp/: Interpreter.hs  TCTypes.hs  TCUtils.hs  TypeCheck.hs  Types.hs  Utils.hs
src/interpret/: Interpreter.hs  Types.hs  Utils.hs
src/interpreter/: Expressions.hs  Interpreter.hs  TCTypes.hs  TypeCheck.hs  Types.hs  Utils.hs
src/lang/: AbsOolong.hs  LexOolong.x  ParOolong.hs  ParOolong.y  PrintOolong.hs  SkelOolong.hs  TestOolong.hs  oolong.cf
(+24 files in other folders)
