name:                interp
version:             0.1.0.0
homepage:            https://github.com/githubuser/interp#readme

author:              Maria Oparka
maintainer:          example@example.com
copyright:           2020 Maria Oparka
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable interp
  hs-source-dirs:      src src/lang src/interpreter
  other-modules:
    AbsOolong
    ErrM
    LexOolong
    ParOolong
    PrintOolong
    SkelOolong
    Types
    Utils
    Interpreter
    TypeCheck
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, array, mtl, containers, transformers
                       
